--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -172,7 +172,7 @@ Pagination
 }
 .post-meta li {
   display: inline-block;
-  margin: 0 15px 8px 0;
+  margin: 0 15px 3px 0;
 }
 .post-meta li.post-category span {
   display: inline-block;
