--- a/assets/scss/_post.scss
+++ b/assets/scss/_post.scss
@@ -52,7 +52,7 @@ Pagination
 
   li {
     display: inline-block;
-    margin: 0 15px 8px 0;
+    margin: 0 15px 3px 0;
 
     &.post-category {
       span {
